<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string-array name="HouseType">
        <item>House</item>
        <item>Apartment</item>
        <item>Condo</item>
        <item>Basement</item>
        <item>None</item>
    </string-array>
    <string-array name="Area">
        <item>Scarbrough</item>
        <item>Markham</item>
        <item>Toronto</item>
        <item>Mississuaga</item>
        <item>None</item>
    </string-array>

    <string name="startBtn">Start</string>
    <string name="searchBtn">Search</string>
    <string name="HouseTypeTv">House Type:</string>
    <string name="NumOfRoomTv">Number Of Room:</string>
    <string name="PriceTv">Price:</string>
    <string name="PriceTagTv">Your Price</string>
    <string name="AreaTv">Area:</string>
    <string name="title_activity_instruction">InstructionActivity</string>
    
    <string name="UserHelp">User Help</string>
    
    <!-- Main Page -->
    
    <string name="btnStart">Start</string>
    <string name="logo">Logo</string>
    <string name="nameRent">iHome Rentals</string>
    
    <!-- House View -->
    
    <string name="txtNumofRoom">NumOfRoom</string>
    <string name="txtOwnerName">OwnerName</string>
    <string name="txtPrice">Price</string>
    <string name="txtAddress">Address</string>

</resources>
