<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >


    <TextView
        android:id="@+id/houseTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/priceSeekbar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/HouseTypeTv"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/houseTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/priceSeekbar"
        android:layout_alignTop="@+id/houseTypeTv"
        android:layout_toRightOf="@+id/searchBtn"
        android:entries="@array/HouseType" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/roomLvTv"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/roomLvTv"
        android:layout_toRightOf="@+id/searchBtn"
        android:ems="10" 
        android:inputType="number"/>

    <TextView
        android:id="@+id/roomLvTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/houseTypeTv"
        android:layout_marginTop="63dp"
        android:text="@string/NumOfRoomTv"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/searchBtn" />

    <Spinner
        android:id="@+id/areaSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/priceSeekbar"
        android:layout_alignTop="@+id/areaDetailTv"
        android:entries="@array/Area" />

    <TextView
        android:id="@+id/priceTagTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/priceSeekbar"
        android:layout_alignRight="@+id/roomLvTv"
        android:text="@string/PriceTagTv"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/priceDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roomLvTv"
        android:layout_below="@+id/roomLvTv"
        android:layout_marginTop="63dp"
        android:text="@string/PriceTv"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/priceSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/priceDetailTv"
        android:layout_below="@+id/priceDetailTv"
        android:layout_marginTop="19dp"
        android:max="2500" />

    <TextView
        android:id="@+id/areaDetailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/priceDetailTv"
        android:layout_below="@+id/priceSeekbar"
        android:layout_marginTop="39dp"
        android:text="@string/AreaTv"
        android:textSize="20sp" />
    
    
    

</RelativeLayout>
